[package]
name = "capitalist"
version = "0.1.0"
authors = ["Petrus Batalha <petrus.batalha1@ibm.com>"]
edition = "2018"

[dependencies]
bincode = "1.3.1"
serde_json = "1.0"
warp = "0.2.4"
rocksdb = "0.15.0"
chrono = "0.4"
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
lazy_static = "1.4.0"
futures = "0.3"
byteorder = "1.0.0"
config = "0.10.1"
tokio = { version = "0.2", features = ["macros", "blocking", "rt-core", "net", "time"]}
serde = { version = "1.0.114", features = ["derive"] }
rdkafka = { version = "0.24", features = ["ssl", "cmake-build", "gssapi-vendored"]}