[package]
name = "capitalist"
version = "0.1.0"
authors = ["Petrus Batalha <petrus.batalha21@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.40"
bincode = "1.3.1"
serde_json = "1.0"
warp = "0.3.0"
rocksdb = "0.15.0"
chrono = "0.4"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.6.0"
lazy_static = "1.4.0"
futures = "0.3"
byteorder = "1.0.0"
config = "0.10.1"
tokio = { version = "1.2.0", features = ["macros",  "rt-multi-thread", "time"]}
serde = { version = "1.0.114", features = ["derive"] }
rdkafka = "0.25"